<resources>
    <string name="app_name" translatable="false">Pixel Blacksmith</string>
    <string name="assistant_name_1">Pig</string>
    <string name="assistant_name_2">Troll</string>
    <string name="assistant_name_3">Skeleton</string>
    <string name="assistant_name_4">Human</string>
    <string name="assistant_name_5">Elf</string>
    <string name="assistant_name_6">Orc</string>
    <string name="assistantTitle">Assistant</string>
    <string name="assistantAlertSelected">Selected assistant \"%1$s\"!</string>
    <string name="assistantButtonSelect">Select</string>
    <string name="assistantButtonSelected">Selected!</string>
    <string name="assistantButtonLockedLevel">Req. Lev </string>
    <string name="assistantButtonLockedCoins">Unlock for </string>
    <string name="assistantBuyQuestion">Unlock \"%1$s\" for %2$d coins?</string>
    <string name="assistantSpecs">Tier %1$d %2$s</string>
    <string name="assistantDesc">Per level:\n%1$dx %2$s per %3$s.\n+%4$.0f%% XP / coin boost.\n\nCurrent:\n%5$dx %2$s per %3$s.\n+%6$.0f%% XP / coin boost.</string>
    <string name="assistantClaimed">Received %1$dx %2$s!</string>
    <string name="assistantTimeLeft">Assistant bonus ready to claim in %1$s.</string>
    <string name="assistantProgressText">Lev %1$d/%2$d (%3$d%%)</string>
    <string name="assistantOverallProgressText">Assistant %1$d/%2$d</string>
    <string name="assistantName">%1$s [Edit?]</string>
    <string name="assistantEditNamePrompt">What would you like to rename \"%1$s\" to (maximum 30 characters)?</string>
    <string name="assistantUnlockAlert">Unlocked assistant \"%1$s\"!</string>
    <string name="assistantProgressAlert">Progress towards level %1$d: %2$d/%3$d XP</string>
    <string name="assistantReady">Bonus\nReady!</string>
    <string name="assistantNotReady">Bonus:\n</string>
    <string name="assistantTeaser">No\nAssistant!</string>
    <string name="eventEasterItem">You found a %1$s! Look for the Golden Egg recipe in the food section of the furnace to unlock a valuable item &amp; unique achievement!</string>
    <string name="eventEasterText">It\'s Easter!\n\nColoured easter eggs will be found at random whilst the game is open, and can be used to create an extremely valuable easter item. Look under the food tab in the furnace!\n\nAdditionally, a new visitor has been added who will always reward this new valuable item. Good luck finding him!\n\nEvent ends on 22nd April.</string>
    <string name="eventChristmasItem">You found a %1$s! Look for the Goody Sack recipe in the books section of the crafting table to earn a valuable item!</string>
    <string name="eventChristmasText">It\'s Christmas!\n\nColoured presents will be found at random whilst the game is open, and can be used to create an extremely valuable christmas item. Look under the books tab in the crafting table!\n\nAdditionally, a new visitor has been added who will always reward this new valuable item. Good luck finding him!\n\nEvent ends on 5th January.</string>
    <string name="tool_pickaxe">Pickaxe (Ore)</string>
    <string name="tool_hammer">Hammer (Bar)</string>
    <string name="tool_fishing_rod">Fishing Rod (Food)</string>
    <string name="tool_hatchet">Hatchet (Wood)</string>
    <string name="tool_gloves">Gloves (Silk)</string>
    <string name="tool_gem">Gem (Powder)</string>
    <string name="tool_silver_ring">Silver Ring (Silver + Gems)</string>
    <string name="tool_gold_ring">Gold Ring (Gold + Gems)</string>
    <string name="tool_visage">Visage (Coins)</string>
    <string name="help_assistants">Assistants</string>
    <string name="help_text_assistants">Assistants can be recruited (for a cost) after certain levels, and will provide regular income alongside passive XP &amp; gold bonuses.\n\nThey level up automatically as you gain XP, up to their maximum level. Every 10 levels their appearance also changes!\n\nHigher level assistants will provide better bonuses, make sure to claim the bonus items regularly! To claim, click the "Bonus Ready" text on the main screen.</string>
    <string name="help_coins">Coins</string>
    <string name="help_text_coins">Coins are earned and spent during normal gameplay. The buyable amount is dependent on your current player level.\nThe larger pack is also better value, so check out the two prices and see which works best for you!\n</string>
    <string name="help_prestige">Prestige</string>
    <string name="help_text_prestige">Prestiging resets many aspects of your game, and can only be performed at level 70 by premium players.\n\nBenefits:\n+50%% coins bonus.\n-25%% XP bonus.\n+100%% to completion percentage.\nAchievement on first prestige.\n\nReset:\nAll items (except pages and books).\nAll upgrades (except premium benefits).\nAll slots.\nXP / Level.\nCurrent visitors.\nExtra trader stock unlocked.\nAll workers.\n\nKept:\nDiscovered visitor preferences.\nVisitor trophy progress.\nHighest level statistic.\nItems smelted / crafted / traded / bought / sold &amp; gems embedded statistics.\nCoins earned statistic.\nBiggest trade statistic.\nHelper\'s trips statistic.\nQuests completed statistic.</string>
    <string name="help_tips">Prestige</string>
    <string name="help_help">Help</string>
    <string name="help_text_help">You want help for the help!?\nGet out of here, there\'s money to make!</string>
    <string name="help_advertising">Advertising</string>
    <string name="help_text_advertising">There are 2 types of advert in Pixel Blacksmith.\nThe first is a \'convenience\' one, e.g. skipping a timer, getting a free restock. The other type is the \'bonus\' advert, accessible via the bonus chest.\nThis chest can only be opened every few hours (premium members have a shorter timer).\nPremium members can also disable adverts. If this option is selected, all mention of adverts will be removed.</string>
    <string name="help_overview">Overview</string>
    <string name="help_text_overview">So, here\'s the deal: You\'re a blacksmith. A not very good one, to be honest.\nIf you want to make a name for yourself, you\'re going to have to keep visitors happy, and keep an eye on your resources.\nOr, I guess you could ignore all the visitors and just work towards making the high end gear. But, y\'know, don\'t do that.\nGenerally, ores come from the market and other ingredients come from visitors and certain traders. You can also hire workers to gather resources for you.\nThese ores are smelted in the furnace, crafted at the anvil, finished at the table, and embedded with gems at the gem table, before being sold to a visitor.\nVisitors, like the rest of us, have preferences. Once a visitor has been sold one of their favourite types / tiers / states of item, their preference and associated bonus will be saved.\nNext time they visit, selling them preferred items will provide a nice healthy bonus tip for yourself.\nGet stuck at any stage in the process? Press the help button!</string>
    <string name="help_furnace">Furnace</string>
    <string name="help_text_furnace">The furnace is the starting point for creating items.\nOre is generally bought from passing traders at the marketplace, but it can also be given as a reward by happy visitors.\nOre you receive will have to be smelted into bars before any items can be created with it. Some bars will require a mixer, generally coal, to facilitate the creation of bars.\nWhilst bars can be sold, they\'ll generally be a lot more valuable if they are first hammered into an unfinished item via the anvil, and finally finished at the crafting table.\nFood can also be created here. This can be sold to visitors, or given to workers to increase resources returned / increase the chance of pages.\nSwipe left and right to change items. Pressing \'Smelt 10\' will add 10 bars to your smelting queue, if you have the resources.</string>
    <string name="help_anvil">Anvil</string>
    <string name="help_text_anvil">After the furnace creates bars, the anvil must be used to hammer them into shape.\nMost recipes only require bars, with more valuable items requiring more bars.\nOf course, these unfinished items aren\'t quite done yet. They will still require combining with a secondary ingredient, which is done at the crafting table.\nRings can also be crafted via the separate \'Rings\' tab.\nSwipe left and right to change items. Use the up and down arrows to change tiers.\nPressing \'10\' will add 10 of the item to your crafting queue, if you have the resources.</string>
    <string name="help_inventory">Inventory</string>
    <string name="help_text_inventory">All of your current stock can be viewed here.\nMost items can be sold for their basic value here, although this is not recommended. Note that any prestige / coins bonus will not apply here.\nInstead, try and create items that will sell for a large bonus with visitors.\nLong pressing an item will mark it as unsellable, useful when saving items.\nIf a page has "Exc" next to it, it can be exchanged for a random page. This can be useful when trying to get the last few pages for a book.\nScroll up and down to view all items.</string>
    <string name="help_food">Food Selection</string>
    <string name="help_text_food">Helpers can be given food here.\nEach worker has a favourite food, and if it has been used in the past it will be highlighted here with green text and double the usual bonus.\nTrying different foods with helpers to find their favourite is a good way to maximise bonus resources.</string>
    <string name="help_credits">Credits</string>
    <string name="creditsText" translatable="false">Credits</string>
    <string name="statisticsText">Statistics</string>
    <string name="premiumText">Premium</string>
    <string name="buyContribute">Contribute</string>
    <string name="contributeDescription">Hey!\n\nThank you so much for buying premium. The contribute option is for those that want to give more to support development.\n\nThere is a 1337 coin reward for contributing, and you can contribute as often as you like. If you\'re interested in buying more coins, coins can be bought (+ button next to coins).\n\nContributing repeatedly provides access to more behind-the-scenes content, up to suggesting new features for the game.</string>
    <string name="buyPremium">Go Premium!</string>
    <string name="premiumFeatures">Premium benefits:
\n- Immediate +20%% to bonus coins and bonus XP upgrades.
\n- +50%% maximum possible bonus coins and bonus XP upgrades (from 50%% to 100%).
\n- Easier access to extremely powerful Super Upgrades.
\n- Ability to turn off all ads.
\n- Access to 17 new extremely valuable legendary items.
\n- Extra crafting slot for all areas.
\n- Coins paid by all out of stock traders on automatic market restock.
\n- Ability to prestige at level 70, and begin a New Game Plus with +50%% coin earnings &amp; -25%% XP!
\n- Doubled bonus chest rewards, and reduced time between chest openings.
\n- Ability to Contribute, which can unlock beta access and suggesting new items / visitors!
\n- A big thank you from the developer!</string>
    <string name="statisticsSmelted">Items Smelted:</string>
    <string name="statisticsCrafted">Items Crafted:</string>
    <string name="statisticsTraded">Items Traded:</string>
    <string name="statisticsSold">Items Sold:</string>
    <string name="statisticsVisitors">Visitors Completed:</string>
    <string name="statisticsCoins">Coins Earned:</string>
    <string name="statisticsStarted">Date Started:</string>
    <string name="creditsMusic" translatable="false">Music</string>
    <string name="creditsMusicDetails" translatable="false">\"The Path of the Goblin King\" - <a href='http://incompetech.com'>Kevin MacLeod</a></string>
    <string name="creditsCCBY" translatable="false">Modified: Reduced bitrate. Licensed under <a href='http://creativecommons.org/licenses/by/3.0/'>Creative Commons: By Attribution 3.0</a>.</string>
</resources>