<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/statistics"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/background_2part"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="2"
        tools:context="uk.co.jakelee.blacksmith.main.StatisticsActivity">

        <uk.co.jakelee.blacksmith.controls.TextViewPixel
            android:id="@+id/statisticsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/statisticsText"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black"
            android:textIsSelectable="false"
            android:textSize="55sp" />

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/statisticsScroller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/statisticsTitle"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="8dp"
                android:columnCount="2">

                <uk.co.jakelee.blacksmith.controls.TextViewPixel
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:text="@string/statisticsSmelted"/>

                <uk.co.jakelee.blacksmith.controls.TextViewPixel
                    android:id="@+id/itemsSmelted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>

                <uk.co.jakelee.blacksmith.controls.TextViewPixel
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:text="@string/statisticsCrafted"/>

                <uk.co.jakelee.blacksmith.controls.TextViewPixel
                    android:id="@+id/itemsCrafted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>

                <uk.co.jakelee.blacksmith.controls.TextViewPixel
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:text="@string/statisticsTraded"/>

                <uk.co.jakelee.blacksmith.controls.TextViewPixel
                    android:id="@+id/itemsTraded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>

                <uk.co.jakelee.blacksmith.controls.TextViewPixel
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:text="@string/statisticsSold"/>

                <uk.co.jakelee.blacksmith.controls.TextViewPixel
                    android:id="@+id/itemsSold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>

                <uk.co.jakelee.blacksmith.controls.TextViewPixel
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:text="@string/statisticsVisitors"/>

                <uk.co.jakelee.blacksmith.controls.TextViewPixel
                    android:id="@+id/visitorsCompleted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>

                <uk.co.jakelee.blacksmith.controls.TextViewPixel
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:text="@string/statisticsCoins"/>

                <uk.co.jakelee.blacksmith.controls.TextViewPixel
                    android:id="@+id/coinsEarned"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>

                <uk.co.jakelee.blacksmith.controls.TextViewPixel
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:text="@string/statisticsStarted"/>

                <uk.co.jakelee.blacksmith.controls.TextViewPixel
                    android:id="@+id/dateStarted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>

                <uk.co.jakelee.blacksmith.controls.TextViewPixel
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:text="@string/statisticsRestocked"/>

                <uk.co.jakelee.blacksmith.controls.TextViewPixel
                    android:id="@+id/dateRestocked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>
            </GridLayout>
        </ScrollView>

    </RelativeLayout>

    <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="35dp"
        android:onClick="closePopup"
        android:src="@drawable/close" />
</RelativeLayout>