<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/premium"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/background_2part"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="2"
        tools:context="uk.co.jakelee.blacksmith.main.PremiumActivity">

        <uk.co.jakelee.blacksmith.controls.TextViewPixel
            android:id="@+id/premiumTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_marginBottomPercent="9%"
            app:layout_marginTopPercent="3%"
            android:gravity="center"
            android:text="@string/premiumText"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black"
            android:textIsSelectable="false"
            android:textSize="55sp" />

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/premiumScroller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/premiumTitle"
            android:fadeScrollbars="false">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <uk.co.jakelee.blacksmith.controls.TextViewPixel
                    android:id="@+id/contributeDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contributeDescription"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:visibility="gone"/>

                <uk.co.jakelee.blacksmith.controls.TextViewPixel xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/contributeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:layout_below="@id/contributeDescription"
                    android:background="@drawable/button_extra_wide"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="buyContribute"
                    android:text="@string/buyContribute"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:visibility="gone"/>

                <LinearLayout
                    android:id="@+id/contributeContainer"
                    android:layout_below="@id/contributeButton"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"/>

                <uk.co.jakelee.blacksmith.controls.TextViewPixel
                    android:id="@+id/premiumFeatures"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/premiumFeatures"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>

                <uk.co.jakelee.blacksmith.controls.TextViewPixel xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/buyPremiumButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_below="@id/premiumFeatures"
                    android:background="@drawable/button_extra_wide"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="buyPremium"
                    android:text="@string/buyPremium"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:visibility="gone"/>
            </RelativeLayout>

        </ScrollView>
    </android.support.percent.PercentRelativeLayout>

    <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/help"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="35dp"
        android:onClick="openHelp"
        android:src="@drawable/help" />

    <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/close"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:layout_marginTop="35dp"
        android:onClick="closePopup"
        android:src="@drawable/close" />
</android.support.percent.PercentRelativeLayout>